--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-first-contract-frontend",
+  "name": "my-terra-dapp-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
