--- a/package.json
+++ b/package.json
@@ -10,20 +10,32 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^25.2.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@types/jest": "^27.0.2",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "buffer": "^6.0.3",
+    "cross-env": "^7.0.3",
+    "crypto-browserify": "^3.12.0",
+    "lint-staged": "^11.2.6",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.1.11",
+    "react-scripts": "5.0.0",
+    "stream-browserify": "^3.0.0",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
