--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "dependencies": {
     "@terra-money/terra.js": "^2.0.15",
     "@terra-money/wallet-provider": "^2.3.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "4.0.3", 
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^25.2.1",
@@ -30,17 +29,14 @@
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
-    "lint-staged": "^11.2.6",
     "process": "^0.11.10",
-    "react-app-rewired": "^2.1.11",
-    "react-scripts": "5.0.0",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test setupFile ./src/setupTests.ts",
     "eject": "react-scripts eject",
     "lint": "eslint src"
   },
@@ -48,6 +44,14 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.ts?(x)",
+      "!**/*.d.ts?(x)",
+      "!**/*.stories.ts?(x)",
+      "!**/__*__/**"
     ]
   },
   "browserslist": {
