--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@terra-money/wallet-provider": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3", 
+    "react-scripts": "^4.0.3", 
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
