--- a/package.json
+++ b/package.json
@@ -26,11 +26,6 @@
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
-    "buffer": "^6.0.3",
-    "cross-env": "^7.0.3",
-    "crypto-browserify": "^3.12.0",
-    "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
     "typescript": "^4.4.4"
   },
   "scripts": {
@@ -40,12 +35,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint src"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "eslintConfig": {},
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.ts?(x)",
