--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Terra App",
-  "name": "My Terra App",
+  "short_name": "Interchain App",
+  "name": "My Interchain App",
   "icons": [
     {
       "src": "favicon.ico",
