--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@terra-money/wallet-provider": "^4.0.0",
+    "@terra-money/wallet-interface": "^1.0.0-beta.1",
+    "@terra-money/wallet-kit": "^1.0.0-beta.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
